lupe.output
Terminais sem uso na gramática

    VIRGULA
    EXPPARS
    EXPOPS
    EXPSUB
    NOVAVAR
    ATRIBUIR
    NOTVAR
    OPCOMP
    OPLOGICA


Estado 1 conflitos: 9 de deslocamento/redução
Estado 13 conflitos: 10 de deslocamento/redução
Estado 55 conflitos: 9 de deslocamento/redução
Estado 57 conflitos: 4 de deslocamento/redução
Estado 81 conflitos: 10 de deslocamento/redução
Estado 85 conflitos: 4 de deslocamento/redução
Estado 89 conflitos: 9 de deslocamento/redução
Estado 90 conflitos: 9 de deslocamento/redução
Estado 95 conflitos: 10 de deslocamento/redução
Estado 96 conflitos: 10 de deslocamento/redução
Estado 105 conflitos: 9 de deslocamento/redução
Estado 106 conflitos: 10 de deslocamento/redução


Gramática

    0 $accept: inicio $end

    1 inicio: INICIOPROG sentencas FIMPROG

    2 sentenca: atribuir
    3         | novavar
    4         | escrever
    5         | ler
    6         | loopfor
    7         | loopwhile
    8         | condifelse
    9         | %empty

   10 sentencas: sentenca
   11          | sentencas sentenca

   12 varint: VARIAVEL
   13       | INT

   14 valor: CHAR
   15      | REAL
   16      | varint

   17 opmod: varint MOD varint

   18 operacoes: SOMA
   19          | SUB
   20          | MULTI
   21          | DIVI

   22 expressaoA: ABREP expressaoA FECHAP
   23           | expressaoA operacoes expressaoA
   24           | SUB expressaoA
   25           | valor
   26           | opmod

   27 tipos: T_INT
   28      | T_CHAR
   29      | T_REAL

   30 novavar: tipos VARIAVEL PTVIRGULA

   31 $@1: %empty

   32 atribuir: VARIAVEL $@1 ATRIBUICAO expressaoA PTVIRGULA

   33 escrever: SAIDA ABREP expressaoA FECHAP PTVIRGULA

   34 ler: ENTRADA ABREP VARIAVEL FECHAP PTVIRGULA

   35 operadorL: AND
   36          | OR

   37 varlogica: NOT expressaoA
   38          | expressaoA

   39 relacional: IGUAL
   40           | MAIORIGUAL
   41           | MENORIGUAL
   42           | MAIOR
   43           | MENOR
   44           | DIFERENTE

   45 opcomp: expressaoA relacional expressaoA

   46 oplogica: varlogica operadorL varlogica

   47 opLogicas: oplogica
   48          | opcomp
   49          | varlogica

   50 condif: IF ABREP opLogicas FECHAP INICIOBLOCO sentencas FIMBLOCO

   51 condifelse: condif
   52           | condif ELSE INICIOBLOCO sentencas FIMBLOCO

   53 $@2: %empty

   54 loopfor: FOR ABREP VARIAVEL $@2 PTVIRGULA expressaoA PTVIRGULA opLogicas PTVIRGULA expressaoA FECHAP INICIOBLOCO sentencas FIMBLOCO

   55 loopwhile: WHILE ABREP opLogicas FECHAP INICIOBLOCO sentencas FIMBLOCO


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    VARIAVEL (258) 12 30 32 34 54
    INT (259) 13
    CHAR (260) 14
    REAL (261) 15
    ATRIBUICAO (262) 32
    SOMA (263) 18
    SUB (264) 19 24
    MULTI (265) 20
    DIVI (266) 21
    MOD (267) 17
    AND (268) 35
    OR (269) 36
    NOT (270) 37
    IGUAL (271) 39
    MAIORIGUAL (272) 40
    MENORIGUAL (273) 41
    MAIOR (274) 42
    MENOR (275) 43
    DIFERENTE (276) 44
    VIRGULA (277)
    PTVIRGULA (278) 30 32 33 34 54
    ABREP (279) 22 33 34 50 54 55
    FECHAP (280) 22 33 34 50 54 55
    INICIOBLOCO (281) 50 52 54 55
    FIMBLOCO (282) 50 52 54 55
    INICIOPROG (283) 1
    FIMPROG (284) 1
    T_INT (285) 27
    T_CHAR (286) 28
    T_REAL (287) 29
    IF (288) 50
    ELSE (289) 52
    WHILE (290) 55
    FOR (291) 54
    ENTRADA (292) 34
    SAIDA (293) 33
    EXPPARS (294)
    EXPOPS (295)
    EXPSUB (296)
    NOVAVAR (297)
    ATRIBUIR (298)
    NOTVAR (299)
    OPCOMP (300)
    OPLOGICA (301)


Não terminais com as regras onde eles aparecem

    $accept (47)
        à esquerda: 0
    inicio (48)
        à esquerda: 1
        à direita: 0
    sentenca <nos> (49)
        à esquerda: 2 3 4 5 6 7 8 9
        à direita: 10 11
    sentencas <nos> (50)
        à esquerda: 10 11
        à direita: 1 11 50 52 54 55
    varint <nos> (51)
        à esquerda: 12 13
        à direita: 16 17
    valor <nos> (52)
        à esquerda: 14 15 16
        à direita: 25
    opmod <nos> (53)
        à esquerda: 17
        à direita: 26
    operacoes <tipoint> (54)
        à esquerda: 18 19 20 21
        à direita: 23
    expressaoA <nos> (55)
        à esquerda: 22 23 24 25 26
        à direita: 22 23 24 32 33 37 38 45 54
    tipos <tipoint> (56)
        à esquerda: 27 28 29
        à direita: 30
    novavar <nos> (57)
        à esquerda: 30
        à direita: 3
    atribuir <nos> (58)
        à esquerda: 32
        à direita: 2
    $@1 (59)
        à esquerda: 31
        à direita: 32
    escrever <nos> (60)
        à esquerda: 33
        à direita: 4
    ler <nos> (61)
        à esquerda: 34
        à direita: 5
    operadorL <tipoint> (62)
        à esquerda: 35 36
        à direita: 46
    varlogica <nos> (63)
        à esquerda: 37 38
        à direita: 46 49
    relacional <tipoint> (64)
        à esquerda: 39 40 41 42 43 44
        à direita: 45
    opcomp <nos> (65)
        à esquerda: 45
        à direita: 48
    oplogica <nos> (66)
        à esquerda: 46
        à direita: 47
    opLogicas <nos> (67)
        à esquerda: 47 48 49
        à direita: 50 54 55
    condif <nos> (68)
        à esquerda: 50
        à direita: 51 52
    condifelse <nos> (69)
        à esquerda: 51 52
        à direita: 8
    loopfor <nos> (70)
        à esquerda: 54
        à direita: 6
    $@2 (71)
        à esquerda: 53
        à direita: 54
    loopwhile <nos> (72)
        à esquerda: 55
        à direita: 7


Estado 0

    0 $accept: . inicio $end

    INICIOPROG  deslocar, e ir ao estado 1

    inicio  ir ao estado 2


Estado 1

    1 inicio: INICIOPROG . sentencas FIMPROG

    VARIAVEL  deslocar, e ir ao estado 3
    T_INT     deslocar, e ir ao estado 4
    T_CHAR    deslocar, e ir ao estado 5
    T_REAL    deslocar, e ir ao estado 6
    IF        deslocar, e ir ao estado 7
    WHILE     deslocar, e ir ao estado 8
    FOR       deslocar, e ir ao estado 9
    ENTRADA   deslocar, e ir ao estado 10
    SAIDA     deslocar, e ir ao estado 11

    VARIAVEL  [reduzir usando a regra 9 (sentenca)]
    T_INT     [reduzir usando a regra 9 (sentenca)]
    T_CHAR    [reduzir usando a regra 9 (sentenca)]
    T_REAL    [reduzir usando a regra 9 (sentenca)]
    IF        [reduzir usando a regra 9 (sentenca)]
    WHILE     [reduzir usando a regra 9 (sentenca)]
    FOR       [reduzir usando a regra 9 (sentenca)]
    ENTRADA   [reduzir usando a regra 9 (sentenca)]
    SAIDA     [reduzir usando a regra 9 (sentenca)]
    $padrão  reduzir usando a regra 9 (sentenca)

    sentenca    ir ao estado 12
    sentencas   ir ao estado 13
    tipos       ir ao estado 14
    novavar     ir ao estado 15
    atribuir    ir ao estado 16
    escrever    ir ao estado 17
    ler         ir ao estado 18
    condif      ir ao estado 19
    condifelse  ir ao estado 20
    loopfor     ir ao estado 21
    loopwhile   ir ao estado 22


Estado 2

    0 $accept: inicio . $end

    $end  deslocar, e ir ao estado 23


Estado 3

   32 atribuir: VARIAVEL . $@1 ATRIBUICAO expressaoA PTVIRGULA

    $padrão  reduzir usando a regra 31 ($@1)

    $@1  ir ao estado 24


Estado 4

   27 tipos: T_INT .

    $padrão  reduzir usando a regra 27 (tipos)


Estado 5

   28 tipos: T_CHAR .

    $padrão  reduzir usando a regra 28 (tipos)


Estado 6

   29 tipos: T_REAL .

    $padrão  reduzir usando a regra 29 (tipos)


Estado 7

   50 condif: IF . ABREP opLogicas FECHAP INICIOBLOCO sentencas FIMBLOCO

    ABREP  deslocar, e ir ao estado 25


Estado 8

   55 loopwhile: WHILE . ABREP opLogicas FECHAP INICIOBLOCO sentencas FIMBLOCO

    ABREP  deslocar, e ir ao estado 26


Estado 9

   54 loopfor: FOR . ABREP VARIAVEL $@2 PTVIRGULA expressaoA PTVIRGULA opLogicas PTVIRGULA expressaoA FECHAP INICIOBLOCO sentencas FIMBLOCO

    ABREP  deslocar, e ir ao estado 27


Estado 10

   34 ler: ENTRADA . ABREP VARIAVEL FECHAP PTVIRGULA

    ABREP  deslocar, e ir ao estado 28


Estado 11

   33 escrever: SAIDA . ABREP expressaoA FECHAP PTVIRGULA

    ABREP  deslocar, e ir ao estado 29


Estado 12

   10 sentencas: sentenca .

    $padrão  reduzir usando a regra 10 (sentencas)


Estado 13

    1 inicio: INICIOPROG sentencas . FIMPROG
   11 sentencas: sentencas . sentenca

    VARIAVEL  deslocar, e ir ao estado 3
    FIMPROG   deslocar, e ir ao estado 30
    T_INT     deslocar, e ir ao estado 4
    T_CHAR    deslocar, e ir ao estado 5
    T_REAL    deslocar, e ir ao estado 6
    IF        deslocar, e ir ao estado 7
    WHILE     deslocar, e ir ao estado 8
    FOR       deslocar, e ir ao estado 9
    ENTRADA   deslocar, e ir ao estado 10
    SAIDA     deslocar, e ir ao estado 11

    VARIAVEL  [reduzir usando a regra 9 (sentenca)]
    FIMPROG   [reduzir usando a regra 9 (sentenca)]
    T_INT     [reduzir usando a regra 9 (sentenca)]
    T_CHAR    [reduzir usando a regra 9 (sentenca)]
    T_REAL    [reduzir usando a regra 9 (sentenca)]
    IF        [reduzir usando a regra 9 (sentenca)]
    WHILE     [reduzir usando a regra 9 (sentenca)]
    FOR       [reduzir usando a regra 9 (sentenca)]
    ENTRADA   [reduzir usando a regra 9 (sentenca)]
    SAIDA     [reduzir usando a regra 9 (sentenca)]

    sentenca    ir ao estado 31
    tipos       ir ao estado 14
    novavar     ir ao estado 15
    atribuir    ir ao estado 16
    escrever    ir ao estado 17
    ler         ir ao estado 18
    condif      ir ao estado 19
    condifelse  ir ao estado 20
    loopfor     ir ao estado 21
    loopwhile   ir ao estado 22


Estado 14

   30 novavar: tipos . VARIAVEL PTVIRGULA

    VARIAVEL  deslocar, e ir ao estado 32


Estado 15

    3 sentenca: novavar .

    $padrão  reduzir usando a regra 3 (sentenca)


Estado 16

    2 sentenca: atribuir .

    $padrão  reduzir usando a regra 2 (sentenca)


Estado 17

    4 sentenca: escrever .

    $padrão  reduzir usando a regra 4 (sentenca)


Estado 18

    5 sentenca: ler .

    $padrão  reduzir usando a regra 5 (sentenca)


Estado 19

   51 condifelse: condif .
   52           | condif . ELSE INICIOBLOCO sentencas FIMBLOCO

    ELSE  deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 51 (condifelse)


Estado 20

    8 sentenca: condifelse .

    $padrão  reduzir usando a regra 8 (sentenca)


Estado 21

    6 sentenca: loopfor .

    $padrão  reduzir usando a regra 6 (sentenca)


Estado 22

    7 sentenca: loopwhile .

    $padrão  reduzir usando a regra 7 (sentenca)


Estado 23

    0 $accept: inicio $end .

    $padrão  aceitar


Estado 24

   32 atribuir: VARIAVEL $@1 . ATRIBUICAO expressaoA PTVIRGULA

    ATRIBUICAO  deslocar, e ir ao estado 34


Estado 25

   50 condif: IF ABREP . opLogicas FECHAP INICIOBLOCO sentencas FIMBLOCO

    VARIAVEL  deslocar, e ir ao estado 35
    INT       deslocar, e ir ao estado 36
    CHAR      deslocar, e ir ao estado 37
    REAL      deslocar, e ir ao estado 38
    SUB       deslocar, e ir ao estado 39
    NOT       deslocar, e ir ao estado 40
    ABREP     deslocar, e ir ao estado 41

    varint      ir ao estado 42
    valor       ir ao estado 43
    opmod       ir ao estado 44
    expressaoA  ir ao estado 45
    varlogica   ir ao estado 46
    opcomp      ir ao estado 47
    oplogica    ir ao estado 48
    opLogicas   ir ao estado 49


Estado 26

   55 loopwhile: WHILE ABREP . opLogicas FECHAP INICIOBLOCO sentencas FIMBLOCO

    VARIAVEL  deslocar, e ir ao estado 35
    INT       deslocar, e ir ao estado 36
    CHAR      deslocar, e ir ao estado 37
    REAL      deslocar, e ir ao estado 38
    SUB       deslocar, e ir ao estado 39
    NOT       deslocar, e ir ao estado 40
    ABREP     deslocar, e ir ao estado 41

    varint      ir ao estado 42
    valor       ir ao estado 43
    opmod       ir ao estado 44
    expressaoA  ir ao estado 45
    varlogica   ir ao estado 46
    opcomp      ir ao estado 47
    oplogica    ir ao estado 48
    opLogicas   ir ao estado 50


Estado 27

   54 loopfor: FOR ABREP . VARIAVEL $@2 PTVIRGULA expressaoA PTVIRGULA opLogicas PTVIRGULA expressaoA FECHAP INICIOBLOCO sentencas FIMBLOCO

    VARIAVEL  deslocar, e ir ao estado 51


Estado 28

   34 ler: ENTRADA ABREP . VARIAVEL FECHAP PTVIRGULA

    VARIAVEL  deslocar, e ir ao estado 52


Estado 29

   33 escrever: SAIDA ABREP . expressaoA FECHAP PTVIRGULA

    VARIAVEL  deslocar, e ir ao estado 35
    INT       deslocar, e ir ao estado 36
    CHAR      deslocar, e ir ao estado 37
    REAL      deslocar, e ir ao estado 38
    SUB       deslocar, e ir ao estado 39
    ABREP     deslocar, e ir ao estado 41

    varint      ir ao estado 42
    valor       ir ao estado 43
    opmod       ir ao estado 44
    expressaoA  ir ao estado 53


Estado 30

    1 inicio: INICIOPROG sentencas FIMPROG .

    $padrão  reduzir usando a regra 1 (inicio)


Estado 31

   11 sentencas: sentencas sentenca .

    $padrão  reduzir usando a regra 11 (sentencas)


Estado 32

   30 novavar: tipos VARIAVEL . PTVIRGULA

    PTVIRGULA  deslocar, e ir ao estado 54


Estado 33

   52 condifelse: condif ELSE . INICIOBLOCO sentencas FIMBLOCO

    INICIOBLOCO  deslocar, e ir ao estado 55


Estado 34

   32 atribuir: VARIAVEL $@1 ATRIBUICAO . expressaoA PTVIRGULA

    VARIAVEL  deslocar, e ir ao estado 35
    INT       deslocar, e ir ao estado 36
    CHAR      deslocar, e ir ao estado 37
    REAL      deslocar, e ir ao estado 38
    SUB       deslocar, e ir ao estado 39
    ABREP     deslocar, e ir ao estado 41

    varint      ir ao estado 42
    valor       ir ao estado 43
    opmod       ir ao estado 44
    expressaoA  ir ao estado 56


Estado 35

   12 varint: VARIAVEL .

    $padrão  reduzir usando a regra 12 (varint)


Estado 36

   13 varint: INT .

    $padrão  reduzir usando a regra 13 (varint)


Estado 37

   14 valor: CHAR .

    $padrão  reduzir usando a regra 14 (valor)


Estado 38

   15 valor: REAL .

    $padrão  reduzir usando a regra 15 (valor)


Estado 39

   24 expressaoA: SUB . expressaoA

    VARIAVEL  deslocar, e ir ao estado 35
    INT       deslocar, e ir ao estado 36
    CHAR      deslocar, e ir ao estado 37
    REAL      deslocar, e ir ao estado 38
    SUB       deslocar, e ir ao estado 39
    ABREP     deslocar, e ir ao estado 41

    varint      ir ao estado 42
    valor       ir ao estado 43
    opmod       ir ao estado 44
    expressaoA  ir ao estado 57


Estado 40

   37 varlogica: NOT . expressaoA

    VARIAVEL  deslocar, e ir ao estado 35
    INT       deslocar, e ir ao estado 36
    CHAR      deslocar, e ir ao estado 37
    REAL      deslocar, e ir ao estado 38
    SUB       deslocar, e ir ao estado 39
    ABREP     deslocar, e ir ao estado 41

    varint      ir ao estado 42
    valor       ir ao estado 43
    opmod       ir ao estado 44
    expressaoA  ir ao estado 58


Estado 41

   22 expressaoA: ABREP . expressaoA FECHAP

    VARIAVEL  deslocar, e ir ao estado 35
    INT       deslocar, e ir ao estado 36
    CHAR      deslocar, e ir ao estado 37
    REAL      deslocar, e ir ao estado 38
    SUB       deslocar, e ir ao estado 39
    ABREP     deslocar, e ir ao estado 41

    varint      ir ao estado 42
    valor       ir ao estado 43
    opmod       ir ao estado 44
    expressaoA  ir ao estado 59


Estado 42

   16 valor: varint .
   17 opmod: varint . MOD varint

    MOD  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 16 (valor)


Estado 43

   25 expressaoA: valor .

    $padrão  reduzir usando a regra 25 (expressaoA)


Estado 44

   26 expressaoA: opmod .

    $padrão  reduzir usando a regra 26 (expressaoA)


Estado 45

   23 expressaoA: expressaoA . operacoes expressaoA
   38 varlogica: expressaoA .
   45 opcomp: expressaoA . relacional expressaoA

    SOMA        deslocar, e ir ao estado 61
    SUB         deslocar, e ir ao estado 62
    MULTI       deslocar, e ir ao estado 63
    DIVI        deslocar, e ir ao estado 64
    IGUAL       deslocar, e ir ao estado 65
    MAIORIGUAL  deslocar, e ir ao estado 66
    MENORIGUAL  deslocar, e ir ao estado 67
    MAIOR       deslocar, e ir ao estado 68
    MENOR       deslocar, e ir ao estado 69
    DIFERENTE   deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 38 (varlogica)

    operacoes   ir ao estado 71
    relacional  ir ao estado 72


Estado 46

   46 oplogica: varlogica . operadorL varlogica
   49 opLogicas: varlogica .

    AND  deslocar, e ir ao estado 73
    OR   deslocar, e ir ao estado 74

    $padrão  reduzir usando a regra 49 (opLogicas)

    operadorL  ir ao estado 75


Estado 47

   48 opLogicas: opcomp .

    $padrão  reduzir usando a regra 48 (opLogicas)


Estado 48

   47 opLogicas: oplogica .

    $padrão  reduzir usando a regra 47 (opLogicas)


Estado 49

   50 condif: IF ABREP opLogicas . FECHAP INICIOBLOCO sentencas FIMBLOCO

    FECHAP  deslocar, e ir ao estado 76


Estado 50

   55 loopwhile: WHILE ABREP opLogicas . FECHAP INICIOBLOCO sentencas FIMBLOCO

    FECHAP  deslocar, e ir ao estado 77


Estado 51

   54 loopfor: FOR ABREP VARIAVEL . $@2 PTVIRGULA expressaoA PTVIRGULA opLogicas PTVIRGULA expressaoA FECHAP INICIOBLOCO sentencas FIMBLOCO

    $padrão  reduzir usando a regra 53 ($@2)

    $@2  ir ao estado 78


Estado 52

   34 ler: ENTRADA ABREP VARIAVEL . FECHAP PTVIRGULA

    FECHAP  deslocar, e ir ao estado 79


Estado 53

   23 expressaoA: expressaoA . operacoes expressaoA
   33 escrever: SAIDA ABREP expressaoA . FECHAP PTVIRGULA

    SOMA    deslocar, e ir ao estado 61
    SUB     deslocar, e ir ao estado 62
    MULTI   deslocar, e ir ao estado 63
    DIVI    deslocar, e ir ao estado 64
    FECHAP  deslocar, e ir ao estado 80

    operacoes  ir ao estado 71


Estado 54

   30 novavar: tipos VARIAVEL PTVIRGULA .

    $padrão  reduzir usando a regra 30 (novavar)


Estado 55

   52 condifelse: condif ELSE INICIOBLOCO . sentencas FIMBLOCO

    VARIAVEL  deslocar, e ir ao estado 3
    T_INT     deslocar, e ir ao estado 4
    T_CHAR    deslocar, e ir ao estado 5
    T_REAL    deslocar, e ir ao estado 6
    IF        deslocar, e ir ao estado 7
    WHILE     deslocar, e ir ao estado 8
    FOR       deslocar, e ir ao estado 9
    ENTRADA   deslocar, e ir ao estado 10
    SAIDA     deslocar, e ir ao estado 11

    VARIAVEL  [reduzir usando a regra 9 (sentenca)]
    T_INT     [reduzir usando a regra 9 (sentenca)]
    T_CHAR    [reduzir usando a regra 9 (sentenca)]
    T_REAL    [reduzir usando a regra 9 (sentenca)]
    IF        [reduzir usando a regra 9 (sentenca)]
    WHILE     [reduzir usando a regra 9 (sentenca)]
    FOR       [reduzir usando a regra 9 (sentenca)]
    ENTRADA   [reduzir usando a regra 9 (sentenca)]
    SAIDA     [reduzir usando a regra 9 (sentenca)]
    $padrão  reduzir usando a regra 9 (sentenca)

    sentenca    ir ao estado 12
    sentencas   ir ao estado 81
    tipos       ir ao estado 14
    novavar     ir ao estado 15
    atribuir    ir ao estado 16
    escrever    ir ao estado 17
    ler         ir ao estado 18
    condif      ir ao estado 19
    condifelse  ir ao estado 20
    loopfor     ir ao estado 21
    loopwhile   ir ao estado 22


Estado 56

   23 expressaoA: expressaoA . operacoes expressaoA
   32 atribuir: VARIAVEL $@1 ATRIBUICAO expressaoA . PTVIRGULA

    SOMA       deslocar, e ir ao estado 61
    SUB        deslocar, e ir ao estado 62
    MULTI      deslocar, e ir ao estado 63
    DIVI       deslocar, e ir ao estado 64
    PTVIRGULA  deslocar, e ir ao estado 82

    operacoes  ir ao estado 71


Estado 57

   23 expressaoA: expressaoA . operacoes expressaoA
   24           | SUB expressaoA .

    SOMA   deslocar, e ir ao estado 61
    SUB    deslocar, e ir ao estado 62
    MULTI  deslocar, e ir ao estado 63
    DIVI   deslocar, e ir ao estado 64

    SOMA      [reduzir usando a regra 24 (expressaoA)]
    SUB       [reduzir usando a regra 24 (expressaoA)]
    MULTI     [reduzir usando a regra 24 (expressaoA)]
    DIVI      [reduzir usando a regra 24 (expressaoA)]
    $padrão  reduzir usando a regra 24 (expressaoA)
